trying openmbeeguest's mms-repo

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DOCKER_COMPOSE_VERSION="1.23.2"
 
 # PostgreSQL Variables (db service)
 PG_IMAGE=postgres:9.4-alpine
-PG_SERVICE_NAME=db
+PG_SERVICE_NAME=postgresql
 PG_PORT=5432
 PG_DB_NAME=mms
 PG_USERNAME=mmsuser
@@ -28,7 +28,7 @@ PG_WAIT=10
 
 # Elasticsearch Variables (search service)
 ES_IMAGE=elasticsearch:5.5-alpine
-ES_SERVICE_NAME=search
+ES_SERVICE_NAME=elastic
 ES_PORT=9200
 ES_MAPPING_TEMPLATE_FILE=mapping_template.json
 ES_MAPPING_TEMPLATE_URL=https://github.com/Open-MBEE/mms/raw/develop/mms-ent/repo-amp/src/main/resources/mapping_template.json
@@ -38,7 +38,7 @@ ES_WAIT=10
 
 # MMS Variables (web service)
 CATALINA_OPTS="-Xmx1G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:G1HeapRegionSize=8m -XX:MaxGCPauseMillis=200"
-MMS_IMAGE=openmbee/mms:latest
+MMS_IMAGE=openmbeeguest/mms-repo:latest
 MMS_EXTERNAL_PORT=8080
 MMS_ALFRESCO_DATA_DIR=/mnt/alf_data
 MMS_USERNAME=admin
