--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,112 @@
-version: '3.2'
+version: '3.1'
+
+# Generated on 04-03-2019
 
 services:
-  web:
-    image: "${MMS_IMAGE:-openmbee/mms:latest}"
-    container_name: openmbee-mms
+  alfresco:
+    image: openmbeeguest/mms-repo:3.4.2-SNAPSHOT
+    container_name: v342-mms
     environment:
-      ALF_DATA_DIR: "${MMS_ALFRESCO_DATA_DIR:-/mnt/alf_data}"
-      APP_USER: "${MMS_USERNAME:-admin}"
-      APP_PASS: "${MMS_PASSWORD:-admin}"
-      CATALINA_OPTS: "-Xmx1G -XX:+UseConcMarkSweepGC"
-      ES_HOST: "${ES_SERVICE_NAME}"
-      ES_PORT: "${ES_PORT:-9200}"
-      PG_HOST: "${PG_SERVICE_NAME}"
-      PG_PORT: "${PG_PORT:-5432}"
-      PG_DB_NAME: "${PG_DB_NAME:-mms}"
-      PG_DB_USER: "${PG_USERNAME:-mmsuser}"
-      PG_DB_PASS: "${PG_PASSWORD:?Missing password for PostgreSQL (PG_PASSWORD)}"
+      - CATALINA_OPTS=-Xmx1G -XX:+UseConcMarkSweepGC
+      - MMS_DB_USER=mms
+      - MMS_DB_PASSWORD=mmspass
+      - MMS_DB=mms
+      - ALFRESCO_DB_USER=mms
+      - ALFRESCO_DB_PASSWORD=mmspass
+      - ALFRESCO_DB=alfresco
     depends_on:
-      - db
-      - search
+      - postgresql
+      - activemq
+      - elastic
+      - solr
     networks:
       - internal
     ports:
-      - target: 8080
-        published: "${MMS_EXTERNAL_PORT:-8080}"
-        protocol: tcp
-        mode: host
-    restart: on-failure
+      - 8080:8080
     volumes:
-      - "mmsvol:${MMS_ALFRESCO_DATA_DIR:-/mnt/alf_data}"
+      - alf_logs:/usr/local/tomcat/logs
+      - alfresco-data-volume:/opt/alf_data
+    tmpfs:
+      - /tmp
+      - /usr/local/tomcat/temp/
+      - /usr/local/tomcat/work/
 
-  search:
-    image: elasticsearch:5.5-alpine
-    container_name: openmbee-elasticsearch
-
-    networks:
-      - internal
-    ports:
-      - target: 9200
-        published: "${ES_PORT:-9200}"
-        protocol: tcp
-        mode: host
-    restart: on-failure
-
-  db:
-    image: postgres:9.4-alpine
-    container_name: openmbee-postgres
+  solr:
+    image: openmbeeguest/mms-solr:3.4.2-SNAPSHOT
+    container_name: v342-solr
     environment:
-      POSTGRES_USER: "${PG_USERNAME:-mmsuser}"
-      POSTGRES_PASSWORD: "${PG_PASSWORD:?Missing password for PostgreSQL (PG_PASSWORD)}"
-      POSTGRES_PORT: "${PG_PORT:-5432}"
+      CATALINA_OPTS: "-Xmx1G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:G1HeapRegionSize=8m -XX:MaxGCPauseMillis=200"
     networks:
       - internal
+    volumes:
+      - alf_logs:/usr/local/tomcat/logs/
+      - alfresco-data-volume:/opt/alf_data
+    tmpfs:
+      - /tmp
+      - /usr/local/tomcat/temp/
+      - /usr/local/tomcat/work/
+
+  activemq:
+    image: openmbeeguest/mms-activemq:3.4.2-SNAPSHOT
+    container_name: v342-activemq
     ports:
-      - target: "${PG_PORT:-5432}"
-        published: "${PG_PORT:-5432}"
-        protocol: tcp
-        mode: host
-    restart: on-failure
+      - 61616:61616
+      - 61614:61614
+      - 8161:8161
+    volumes:
+      - activemq-data-volume:/data/activemq
+      - activemq-log-volume:/var/log/activemq
+      - activemq-conf-volume:/opt/activemq/conf
+    environment:
+      - ACTIVEMQ_ADMIN_LOGIN admin
+      - ACTIVEMQ_ADMIN_PASSWORD admin
+    networks:
+      - internal
+
+  elastic:
+    image: openmbeeguest/mms-elastic:3.4.2-SNAPSHOT
+    container_name: v342-elastic
+    environment:
+      CLEAN: 'false'
+    ports:
+      - 9200:9200
+    volumes:
+      - elastic-data-volume:/tmp/elasticsearch/nodes
+    networks:
+      - internal
+
+  postgresql:
+    image: openmbeeguest/mms-postgres:3.4.2-SNAPSHOT
+    container_name: v342-postgres
+    volumes:
+       - postgres-data-volume:/var/lib/postgresql/data
+    environment:
+      - MMS_DB_USER=mms
+      - MMS_DB_PASSWORD=mmspass
+      - MMS_DB=mms
+      - ALFRESCO_DB_USER=mms
+      - ALFRESCO_DB_PASSWORD=mmspass
+      - ALFRESCO_DB=alfresco
+    networks:
+      - internal
 
 volumes:
-  mmsvol:
+  alf_logs:
+    external: true
+  alfresco-data-volume:
+    external: true
+  postgres-data-volume:
+    external: true
+  activemq-data-volume:
+    external: true
+  activemq-log-volume:
+    external: true
+  activemq-conf-volume:
+    external: true
+  elastic-data-volume:
+    external: true
+  nginx-external-volume:
+    external: true
 
 networks:
   internal:
