--- a/alfresco-global.properties
+++ b/alfresco-global.properties
@@ -26,8 +26,8 @@ share.protocol=http
 ### database connection properties ###
 db.driver=org.postgresql.Driver
 db.name=alfresco
-db.username=mmsuser
-db.password=SoM3sUp3r5ECRETpAs5w0rD
+db.username=mms
+db.password=mmspass
 db.host=db
 db.port=5432
 # probably can up this to same as max connections in db configuration (currently 225)
