--- a/mms.properties
+++ b/mms.properties
@@ -23,7 +23,7 @@ app.pass=admin
 pg.host=jdbc:postgresql://db:5432/
 pg.name=mms
 pg.user=mmsuser
-pg.pass=SoM3sUp3r5ECRETpAs5w0rD
+pg.pass=mmspass
 pg.conn.max=96
 pg.limit.insert=5000
 pg.limit.select=1000
