more postgres error fixes

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PG_IMAGE=postgres:9.4-alpine
 PG_SERVICE_NAME=postgresql
 PG_PORT=5432
 PG_DB_NAME=mms
-PG_USERNAME=mmsuser
+PG_USERNAME=mms
 PG_PASSWORD=SoM3sUp3r5ECRETpAs5w0rD
 PG_DB_CREATION_COMMAND="create table if not exists organizations (   id bigserial primary key,   orgId text not null,   orgName text not null,   constraint unique_organizations unique(orgId, orgName) ); create index orgId on organizations(orgId);  create table projects (   id bigserial primary key,   projectId text not null,   orgId integer references organizations(id),   name text not null,   location text not null,   constraint unique_projects unique(orgId, projectId) ); create index projectIdIndex on projects(projectid);"
 PG_TEST_CREATEDB_ROLE_COMMAND="select rolcreatedb from pg_roles where rolname = current_user"
