update postgres mms config w mms user

--- a/mms.properties
+++ b/mms.properties
@@ -22,7 +22,7 @@ app.pass=admin
 #Postgres Settings
 pg.host=jdbc:postgresql://db:5432/
 pg.name=mms
-pg.user=mmsuser
+pg.user=mms
 pg.pass=mmspass
 pg.conn.max=96
 pg.limit.insert=5000
