--- a/alfresco-global.properties
+++ b/alfresco-global.properties
@@ -28,7 +28,7 @@ db.driver=org.postgresql.Driver
 db.name=alfresco
 db.username=mms
 db.password=mmspass
-db.host=localhost
+db.host=postgresql
 db.port=5432
 # probably can up this to same as max connections in db configuration (currently 225)
 db.pool.max=225
