postgres host needs to be the same as docker's service name

--- a/mms.properties
+++ b/mms.properties
@@ -20,7 +20,7 @@ app.user=admin
 app.pass=admin
 
 #Postgres Settings
-pg.host=jdbc:postgresql://db:5432/
+pg.host=jdbc:postgresql://postgresql:5432/
 pg.name=mms
 pg.user=mms
 pg.pass=mmspass
