--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,8 @@ services:
       - /tmp
       - /usr/local/tomcat/temp/
       - /usr/local/tomcat/work/
-
+    restart: on-failure
+    
   solr:
     image: openmbeeguest/mms-solr:3.4.2-SNAPSHOT
     container_name: v342-solr
@@ -45,6 +46,7 @@ services:
       - /tmp
       - /usr/local/tomcat/temp/
       - /usr/local/tomcat/work/
+    restart: on-failure
 
   activemq:
     image: openmbeeguest/mms-activemq:3.4.2-SNAPSHOT
@@ -62,6 +64,7 @@ services:
       - ACTIVEMQ_ADMIN_PASSWORD admin
     networks:
       - internal
+    restart: on-failure
 
   elastic:
     image: openmbeeguest/mms-elastic:3.4.2-SNAPSHOT
@@ -74,6 +77,7 @@ services:
       - elastic-data-volume:/tmp/elasticsearch/nodes
     networks:
       - internal
+    restart: on-failure
 
   postgresql:
     image: openmbeeguest/mms-postgres:3.4.2-SNAPSHOT
