--- a/alfresco-global.properties
+++ b/alfresco-global.properties
@@ -71,7 +71,7 @@ jodconverter.portNumbers=8100
 
 ### Initial admin password ###
 alfresco_user_store.adminusername=admin
-alfresco_user_store.adminpassword=209c6174da490caeb422f3fa5a7ae634
+alfresco_user_store.adminpassword=admin
 
 ### E-mail site invitation setting ###
 notification.email.siteinvite=false
